--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,7 @@
-:root {
-  background-color: #242424;
-}
-
-body {
+html,
+body,
+#app {
+  height: 100%;
   margin: 0;
-
-  min-width: 100vw;
-  min-height: 100vh;
-}
-
-body > div {
-  display: flex;
-  place-items: center;
-  place-content: space-between;
+  width: 100%;
 }
