--- a/src/views/group/components/Group.css
+++ b/src/views/group/components/Group.css
@@ -8,6 +8,8 @@
 
 @media (max-width: 899px) {
     .contentPadding {
-        padding-right: 0px;
+        padding-left: 20px;
+        padding-right: 20px;
     }
+
 }
