--- a/src/views/group/components/Group.css
+++ b/src/views/group/components/Group.css
@@ -6,10 +6,22 @@
     padding-right: 0px;
 }
 
+.membersBox {
+    display: flex;
+    flex-wrap: wrap; 
+    max-width: 100%;
+}
+
 @media (max-width: 899px) {
     .contentPadding {
         padding-left: 20px;
         padding-right: 20px;
     }
 
+    .membersBox {
+        display: flex;
+        flex-wrap: wrap; 
+        max-width: 100%;
+        justify-content: center;
+    }
 }
